
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef size_t u_int8_t ;
typedef size_t u_int32_t ;
typedef size_t u_int ;
struct ber_oid {size_t bo_n; int* bo_id; } ;


 size_t BER_MAX_OID_LEN ;
 size_t BER_MIN_OID_LEN ;
 size_t BER_TAG_MORE ;
 size_t BER_TAG_TYPE_MASK ;

size_t
ber_oid2ber(struct ber_oid *o, u_int8_t *buf, size_t len)
{
 u_int32_t v;
 u_int i, j = 0, k;

 if (o->bo_n < BER_MIN_OID_LEN || o->bo_n > BER_MAX_OID_LEN ||
     o->bo_id[0] > 2 || o->bo_id[1] > 40)
  return (0);

 v = (o->bo_id[0] * 40) + o->bo_id[1];
 for (i = 2, j = 0; i <= o->bo_n; v = o->bo_id[i], i++) {
  for (k = 28; k >= 7; k -= 7) {
   if (v >= (u_int)(1 << k)) {
    if (len)
     buf[j] = v >> k | BER_TAG_MORE;
    j++;
   }
  }
  if (len)
   buf[j] = v & BER_TAG_TYPE_MASK;
  j++;
 }

 return (j);
}
